# ml-kernel-optimizer

./: .gitignore  CMakeLists.txt  ReadMe.md  build-all.sh
include/: matmul.h
src/: matmul.cpp
tests/: test_matmul.cpp
